-*- mode: outline -*-

* Changes since version 0.37

** bug fixes

Fixed possible floating point exception when using strong-random with
a very large integer limit.

** new features

Optimized the Poly1305 MAC.

* Version 0.37, released 2017-11-23

Renamed NULL cipher to XOR. It's a better description of what it does,
and it allows not having to shadow cl:null.

** new features

Added the Camellia block cipher.

Added the SEED block cipher.

Added the ARIA block cipher.

Added the Sosemanuk stream cipher.

* Version 0.36, released 2017-10-02

** bug fixes

Fixed stream cryptors for Chacha and Salsa20. Some bytes of the
keystream were ignored after encrypting less than 64 bytes at once.

Fixed tree hash digester. It could sometimes give a wrong result when
fed data incrementally.

Fixed Arcfour cipher reinitialization.

** new features

Added Gray streams support for ABCL, ECL and Clisp.

Added encrypting streams and decrypting streams. Only stream ciphers
and block ciphers in CTR mode are supported for the moment.

Added authenticating streams.

* Version 0.35, released 2017-09-06

** bug fixes

Fixed type checking of stream element-type in the
update-digest-from-stream function.

Fixed possible timing attack in the pbkdf2-check-password function.

** new features

New algorithms:
 - Cipher: XChacha, XSalsa20
 - Diffie-Hellman: Curve25519, Curve448, Elgamal
 - Digest: JH, Groestl
 - Key derivation function: Argon2i
 - Message authentication code: Blake2, Blake2s
 - Signature: Ed448

New default pseudo-random number generator (os-prng) using the
operating system's PRNG.

Added optimized versions of some common functions for CCL on x86-64
CPUs and for ECL.

Added optimized AES functions (round keys generation, encryption and
decryption) for SBCL on x86-64 CPUs with AES-NI support.

Added optimized Blake2s mixing for SBCL on x86-64 CPUs.

Added the constant-time-equal function to check the equality of two
byte arrays (e.g. passwords, MACs) in constant time.
