@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Ironclad</title>
-<!-- 2017-11-23 jeu. 14:19 -->
+<!-- 2018-02-03 sam. 11:02 -->
 <meta  charset="utf-8">
 <meta  name="generator" content="Org-mode">
 <meta  name="author" content="The Ironclad developers">
@@ -1242,11 +1242,22 @@ Diffie-Hellman key exchange:
 </div>
 
 <p>
-Return a key pair according to <i>kind</i>. If <i>kind</i> is <code>:dsa</code>, <code>:elgamal</code>
-or <code>:rsa</code>, the <i>num-bits</i> key argument indicating the size of the keys
-to generate must be specified. The generation of DSA, Elgamal and RSA
-key pairs can take a very long time.
+Return a key pair according to <i>kind</i>. The generation of DSA, Elgamal
+and RSA key pairs can take some time. If <i>kind</i> is <code>:dsa</code> or <code>:rsa</code>,
+the <i>num-bits</i> key argument indicating the size of the keys to
+generate must be specified. If <i>kind</i> is <code>:elgamal</code>, <i>num-bits</i> must
+be specified unless <i>compatible-with-key</i> is specified, in which case
+the group parameters are taken from the specified key instead of being
+generated.
 </p>
+
+<p>
+For example, if Alice wants to generate a key pair for
+a Diffie-Hellman exchange with Bob's Elgamal key pair:
+</p>
+<pre class="example">
+(generate-key-pair :elgamal :compatible-with-key bob-public-key)
+</pre>
 </div>
 
 <div id="outline-container-sec-8-1-1" class="outline-4">
@@ -1616,7 +1627,8 @@ plist match the <i>&amp;key</i> arguments of the <a href="#make-message">make-me
 
 <p>
 Return a secret shared by two users Alice and Bob, computed from
-Alice's private key and Bob's public key.
+Alice's private key and Bob's public key (these keys must be
+compatible, i.e. have the same group parameters).
 </p>
 </div>
 </div>
